[workspace]
resolver = "2"
members = ["program", "clients/cli"]

[workspace.metadata.cli]
trezoa = "2.3.4"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("trezoa"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
