[package]
name = "trezoa-slashing-program"
version = "1.0.0"
description = "Trezoa Program Library Slashing"
authors = ["Trezoa-team Maintainers <maintainers@trezoa.xyz>"]
repository = "https://github.com/trezoa-program/slashing"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
bytemuck = { version = "1.23.2", features = ["derive"] }
num_enum = "0.7.4"
bincode = "1.3.3"
num-derive = "0.4"
num-traits = "0.2"
trezoa-instruction = "2.2.0"
trezoa-instructions-sysvar = "2.2.0"
trezoa-program = "2.3.0"
trezoa-signature = "2.2.0"
trezoa-system-interface = "1"
serde = "1.0.219" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.17"
serde_derive = "1.0.210" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_with = { version = "3.14.0", default-features = false }
thiserror = "2.0"
tpl-pod = "0.6.0"

[dev-dependencies]
lazy_static = "1.5.0"
trezoa-program-test = "2.3.4"
trezoa-sdk = "2.2.0"
trezoa-ledger = "2.2.0"
trezoa-system-interface = "1"
trezoa-system-program = "2.2.0"
trezoa-system-transaction = "2.2.0"
trezoa-entry = "2.2.0"
trezoa-client = "2.3.4"
tpl-record = "0.3.0"
rand = "0.9.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
